[project]
    name = "general-scripting"
    version = "0.1.0"
    description = "General Scripts"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = []


[tool.ruff]
    # Same as Black.
    line-length = 88
    indent-width = 4

    # Assume Python 3.12
    target-version = "py312"

[tool.ruff.lint]
    select = ["E4", "E7", "E9", "F"]
    ignore = []
    fixable = [
        "ALL",
    ] # Allow fix for all enabled rules (when `--fix`) is provided.
    unfixable = []

[tool.ruff.format]
    quote-style = "single"
    line-ending = "lf"
    indent-style = "space"
    skip-magic-trailing-comma = false


[[tool.mypy.overrides]]
    module = ["httpx", "nltk"]
    ignore_missing_imports = true
